Remove no-longer needed setup and loggers

--- a/.env
+++ b/.env
@@ -1,13 +1,7 @@
-PROJECT_NAME=xlm-l-test
-DATA_DIR=data
-MODEL_DIR=model
+PROJECT_NAME=xlm-l
+DATA_DIR=/Users/admin/data
+MODEL_DIR=/Users/admin/model
 GPU_IDS=0
-JUPYTER_PW=pwd
+JUPYTER_PW=somepwd
 JUPYTER_PORT=9008
-TENSORBOARD_PORT=9009
 PRIVATE_DEPS=none
-SACRED_USER=
-SACRED_PASSWORD=
-SACRED_DATABASE=
-SACRED_HOST=
-
