Add base configs

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
-PROJECT_NAME=
+PROJECT_NAME=xlm-l
 DATA_DIR=
 MODEL_DIR=
-GPU_IDS=
+GPU_IDS=0
 JUPYTER_PW=
-JUPYTER_PORT=
+JUPYTER_PORT=8999
 PRIVATE_DEPS=none
